# gtk-v4l

./: .gitignore  .travis.yml  AUTHORS  AUTHORS.md  ChangeLog  Makefile.am  Makefile.in  NEWS.md  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  gtk-v4l.desktop.in  meson.build
lib/: Makefile.am  Makefile.in  gtk-v4l-control.c  gtk-v4l-control.h  gtk-v4l-device-list.c  gtk-v4l-device-list.h  gtk-v4l-device.c  gtk-v4l-device.h  gtk-v4l-widget.c  gtk-v4l-widget.h  meson.build
po/: meson.build
src/: Makefile.am  Makefile.in  error_dialog.c  gtk-v4l-control.c  gtk-v4l-control.h  gtk-v4l-device-list.c  gtk-v4l-device-list.h  gtk-v4l-device.c  gtk-v4l-device.h  gtk-v4l-widget.c  gtk-v4l-widget.h  gtk-v4l.c  gtk-v4l.h  meson.build
