bin_PROGRAMS = gtk-v4l
gtk_v4l_SOURCES = gtk-v4l.c \
		  gtk-v4l.h \
		  error_dialog.c 

gtk_v4l_CFLAGS = \
        $(GTK_CFLAGS)        \
        $(V4L_CFLAGS)     \
        $(WARN_CFLAGS)          \
        $(AM_CFLAGS)

gtk_v4l_LDFLAGS = \
        $(AM_LDFLAGS)

gtk_v4l_LDADD = \
        $(GTK_LIBS)          \
        $(V4L_LIBS)       


